...
                  {image ? <Image alt='' className='rounded-full' height={24} src={image} width={24} /> : null}
                  {name}
                </AlertDialogTitle>
                <AlertDialogDescription>Log out of {email}?</AlertDialogDescription>
              </AlertDialogHeader>
              <AlertDialogFooter>
                <AlertDialogCancel>Cancel</AlertDialogCancel>
                <form action={onLogout}>
                  <Button>Continue</Button>
                </form>
              </AlertDialogFooter>
            </AlertDialogContent>
          </AlertDialog>
...
