...
          <Form
            className='flex flex-col gap-4'
            form={form}
            render={({ Arr, Choose, File, Files, Submit, Text }) => (
              <>
                <FieldGroup>
                  <Text data-testid='blog-title' name='title' placeholder='My awesome post' />
                  <Choose data-testid='blog-category' name='category' placeholder='Select' />
                  <Text className='min-h-32' data-testid='blog-content' multiline name='content' placeholder='Write...' />
                  <File accept='image/*' data-testid='blog-cover-image' maxSize={5 * 1024 * 1024} name='coverImage' />
                  <Files
                    accept='image/*,application/pdf'
                    data-testid='blog-attachments'
...
