...
    <div data-testid='crud-dynamic-page'>
      <Create />
      <SearchInput
        className='mb-4'
        data-testid='blog-search-input'
        onValueChange={setQuery}
        placeholder='Search blogs...'
        value={query}
      />
      <List blogs={filtered} onRemove={handleRemove} />
      {!deferredQuery && status === 'CanLoadMore' ? <LoadMoreButton onLoadMore={loadMore} /> : null}
    </div>
  )
...
