appId: dev.noboil.mobile.convex.blog
---
- launchApp
- assertVisible:
    id: "crud-dynamic-page"
- tapOn:
    id: "blog-title"
- eraseText: 120
- inputText: "Blog Title 33"
- tapOn:
    id: "blog-content"
- eraseText: 200
- inputText: "Blog Content 33"
- tapOn:
    id: "create-blog-submit"
- assertVisible:
    id: "blog-card-link"
- tapOn:
    id: "edit-link"
- assertVisible:
    id: "blog-edit-page"
- tapOn:
    id: "save-edit"
