appId: dev.noboil.mobile.stdb.blog
---
- launchApp
- assertVisible:
    id: "crud-dynamic-page"
- tapOn:
    id: "blog-title"
- eraseText: 120
- inputText: "Blog Title 16"
- tapOn:
    id: "blog-content"
- eraseText: 200
- inputText: "Blog Content 16"
- tapOn:
    id: "create-blog-submit"
- assertVisible:
    id: "blog-card-link"
