appId: dev.noboil.blog
---
- runFlow: login.yaml
- tapOn:
    text: "plus"
- waitForAnimationToEnd
- assertVisible: "New Post"
- assertVisible: "Title"
- assertVisible: "Category"
- assertVisible: "Content"
- scrollUntilVisible:
    element: "Tags"
    direction: DOWN
    timeout: 5000
- assertVisible: "Tags"
- assertVisible: "Add tag..."
- scrollUntilVisible:
    element: "Published"
    direction: DOWN
    timeout: 5000
- assertVisible: "Published"
- tapOn: "Cancel"
- waitForAnimationToEnd
- assertVisible: "Blog"
