appId: dev.noboil.blog
---
- runFlow: login.yaml
- assertVisible: "Blog"
- tapOn:
    text: "plus"
- waitForAnimationToEnd
- assertVisible: "New Post"
- assertVisible: "Category"
- tapOn: "My awesome post"
- inputText: "Category Test Post"
- hideKeyboard
- tapOn:
    point: 540,1404
- inputText: "Testing category selection"
- hideKeyboard
- scrollUntilVisible:
    element: "Create"
    direction: DOWN
    timeout: 5000
- tapOn: "Create"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Category Test Post"
    timeout: 10000
- tapOn: "Category Test Post"
- waitForAnimationToEnd
- assertVisible: "tech"
- tapOn:
    text: "trash"
- waitForAnimationToEnd
- tapOn: "Delete"
- waitForAnimationToEnd
- assertVisible: "Blog"
