appId: dev.noboil.blog
---
- runFlow: login.yaml
- assertVisible: "Blog"
- tapOn:
    text: "plus"
- waitForAnimationToEnd
- assertVisible: "New Post"
- assertVisible: "Title"
- assertVisible: "Category"
- assertVisible: "Content"
- scrollUntilVisible:
    element: "Create"
    direction: DOWN
    timeout: 5000
- tapOn: "Create"
- waitForAnimationToEnd
- assertVisible: "New Post"
- scrollUntilVisible:
    element: "Title"
    direction: UP
    timeout: 5000
- tapOn: "My awesome post"
- inputText: "V"
- hideKeyboard
- tapOn:
    point: 540,1404
- inputText: "ab"
- hideKeyboard
- scrollUntilVisible:
    element: "Create"
    direction: DOWN
    timeout: 5000
- tapOn: "Create"
- waitForAnimationToEnd
- assertVisible: "New Post"
