appId: dev.noboil.blog
---
- runFlow: login.yaml
- assertVisible: "Blog"
- tapOn:
    text: "plus"
- waitForAnimationToEnd
- assertVisible: "New Post"
- assertVisible: "Title"
- assertVisible: "Content"
- tapOn: "Create"
- waitForAnimationToEnd
- assertVisible: "New Post"
- assertVisible: "Title"
- tapOn: "My awesome post"
- inputText: "Validation Post"
- hideKeyboard
- tapOn:
    point: 540,1404
- inputText: "Val"
- hideKeyboard
- scrollUntilVisible:
    element: "Published"
    direction: DOWN
    timeout: 5000
- tapOn: "Create"
- waitForAnimationToEnd
- extendedWaitUntil:
    notVisible: "New Post"
    timeout: 15000
- extendedWaitUntil:
    visible: "Blog"
    timeout: 10000
- extendedWaitUntil:
    visible: "Validation Post"
    timeout: 10000
- assertVisible: "Validation Post"
