appId: dev.noboil.blog
---
- runFlow: login.yaml
- assertVisible: "Blog"
- assertVisible: "Search blogs..."
- tapOn:
    text: "plus"
- waitForAnimationToEnd
- tapOn: "My awesome post"
- inputText: "List Test Alpha"
- hideKeyboard
- tapOn:
    point: 540,1404
- inputText: "Alpha content"
- hideKeyboard
- scrollUntilVisible:
    element: "Create"
    direction: DOWN
    timeout: 5000
- tapOn: "Create"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "List Test Alpha"
    timeout: 10000
- tapOn:
    text: "plus"
- waitForAnimationToEnd
- tapOn: "My awesome post"
- inputText: "List Test Beta"
- hideKeyboard
- tapOn:
    point: 540,1404
- inputText: "Beta content"
- hideKeyboard
- scrollUntilVisible:
    element: "Create"
    direction: DOWN
    timeout: 5000
- tapOn: "Create"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "List Test Beta"
    timeout: 10000
- assertVisible: "List Test Alpha"
- assertVisible: "List Test Beta"
- tapOn: "List Test Beta"
- waitForAnimationToEnd
- tapOn:
    text: "trash"
- waitForAnimationToEnd
- tapOn: "Delete"
- waitForAnimationToEnd
- tapOn: "List Test Alpha"
- waitForAnimationToEnd
- tapOn:
    text: "trash"
- waitForAnimationToEnd
- tapOn: "Delete"
- waitForAnimationToEnd
- assertVisible: "Blog"
